--- a/bigu/bigu/pom.xml
+++ b/bigu/bigu/pom.xml
@@ -62,7 +62,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>6.0.2</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
