feat: começo da implementação do repositório e service de Motorista e ajustes menores

--- a/bigu/bigu/src/main/resources/application.properties
+++ b/bigu/bigu/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
+server.port=8081
 # Change this to validate in production.
 spring.jpa.hibernate.ddl-auto = create-drop
