refactor: correção dos parametros de email, senha e host do EmailService.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.jpa.properties.hibernate.format_sql=true
 ######################################################################
 # Java mail sender
 ######################################################################
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp-mail.outlook.com
 spring.mail.port=587
-spring.mail.username=biguapp.adm@gmail.com
-spring.mail.password=bigu151902
+spring.mail.username= biguapp@hotmail.com
+spring.mail.password= bigu151902
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
