wip: heroku deployment.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.mail.username=biguapp.adm@gmail.com
 spring.mail.password=bigu151902
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+######################################################################
+# Heroku deployment
+######################################################################
+server.port=${PORT:8080}
