add errors handles to expired token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Heroku deployment
 ######################################################################
 server.port=${PORT:8080}
+
+######################################################################
+# Message Error Handle
+######################################################################
+server.error.include-message=always
