feat: teste funcional de criação de carona

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 ######################################################################
 # Heroku deployment
 ######################################################################
-server.port=${PORT:8080}
+server.port=8080
 
 ######################################################################
 # Message Error Handle
