feat: using Docker and Docker compose.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,10 @@ spring.jpa.hibernate.ddl-auto=update
 ######################################################################
 # Java mail sender
 ######################################################################
-spring.mail.host=smtp-mail.outlook.com
-spring.mail.port=587
-spring.mail.username= biguapp@hotmail.com
-spring.mail.password= bigu151902
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username= ${SPRING_MAIL_USERNAME}
+spring.mail.password= ${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
