--- a/heroku.yml
+++ b/heroku.yml
@@ -1,6 +1,7 @@
-setup:
-  addons:
-    - plan: heroku-postgresql
 build:
   docker:
     web: Dockerfile
+
+  addons:
+    - plan: heroku-postgresql
+      as: DATABASE
