--- a/heroku.yml
+++ b/heroku.yml
@@ -2,6 +2,7 @@ build:
   docker:
     web: Dockerfile
 
-addons:
-  - plan: heroku-postgresql
-    as: DATABASE
+setup:
+  addons:
+    - plan: heroku-postgresql
+      as: DATABASE
