fix: using environment variables on heroku.

--- a/heroku.yml
+++ b/heroku.yml
@@ -6,3 +6,12 @@ setup:
   addons:
     - plan: heroku-postgresql
       as: DATABASE
+
+env:
+  JDBC_DATABASE_URL: ${JDBC_DATABASE_URL}
+  JDBC_DATABASE_USERNAME: ${JDBC_DATABASE_USERNAME}
+  JDBC_DATABASE_PASSWORD: ${JDBC_DATABASE_PASSWORD}
+  SPRING_MAIL_HOST: ${SPRING_MAIL_HOST}
+  SPRING_MAIL_PORT: ${SPRING_MAIL_PORT}
+  SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
+  SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
