--- a/database.env
+++ b/database.env
@@ -1,3 +1,1 @@
-JDBC_DATABASE_URL=jdbc:postgresql://db:5432/bigu
-JDBC_DATABASE_USERNAME=bigu
-JDBC_DATABASE_PASSWORD=bigu
+JDBC_DATABASE_URL=jdbc:postgres://db:5432/bigu?username=bigu&password=bigu
