fix: added custom datasource for agnostic database url.

--- a/bigu-backend.yml
+++ b/bigu-backend.yml
@@ -5,6 +5,7 @@ services:
     image: 'bigu-backend:latest'
     build:
       context: .
+      dockerfile: Dockerfile
     container_name: app
     depends_on:
       - db
