fix: added custom datasource for agnostic database url.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ server.port=${PORT:8080}
 # Message Error Handle
 ######################################################################
 server.error.include-message=always
+spring.main.allow-circular-references=true
