--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 ######################################################################
 # Java mail sender
 ######################################################################
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username= ${SPRING_MAIL_USERNAME}
-spring.mail.password= ${SPRING_MAIL_PASSWORD}
+spring.mail.host=${SPRING_MAIL_HOST:your-mail-host}
+spring.mail.port=${SPRING_MAIL_PORT:587}
+spring.mail.username= ${SPRING_MAIL_USERNAME:your-mail-username}
+spring.mail.password= ${SPRING_MAIL_PASSWORD:your-mail-password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+######################################################################
+# Database
+######################################################################
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/bigu}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:bigu}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:bigu}
 
 ######################################################################
 # Heroku deployment
