--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Database
 ######################################################################
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/bigu}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:bigu}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:bigu}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/bigu}
+spring.datasource.username=${JDBC_DATABASE_USERNAME:bigu}
+spring.datasource.password=${SPRING_DATABASE_PASSWORD:bigu}
 
 ######################################################################
 # Heroku deployment
