fix: removed create-drop property.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 ######################################################################
 # Database
 ######################################################################
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/bigu}
 spring.datasource.username=${JDBC_DATABASE_USERNAME:bigu}
 spring.datasource.password=${SPRING_DATABASE_PASSWORD:bigu}
