fix: deployment now works (single-pod).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Database
 ######################################################################
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/bigu}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://bigu-db:5432/bigu}
 spring.datasource.username=${JDBC_DATABASE_USERNAME:bigu}
 spring.datasource.password=${SPRING_DATABASE_PASSWORD:bigu}
 
@@ -26,3 +26,14 @@ server.port=${PORT:8080}
 ######################################################################
 server.error.include-message=always
 spring.main.allow-circular-references=true
+
+######################################################################
+# Keycloak
+######################################################################
+
+spring.security.oauth2.client.registration.keycloak.client-id=bigu-backend
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.provider.keycloak.issuer-uri=https://localhost:8443/realms/bigu
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://localhost:8443/realms/bigu
